gramatica/y.output
   0  $accept : programa $end

   1  programa : body

   2  body : body sentencia ';'
   3       | sentencia ';'
   4       | error ';'

   5  sentencia : ejecutable
   6            | declarativa

   7  ejecutable : asignacion
   8             | salida
   9             | control
  10             | seleccion
  11             | invocacion

  12  declarativa : tipo listavariables
  13              | procedure
  14              | listavariables
  15              | tipo

  16  procedure : PROC ID '(' dlistaparametros ')' ni '{' body '}'
  17            | PROC ID '(' ')' ni '{' body '}'
  18            | PROC ID '(' dlistaparametros ')' ni
  19            | PROC ID '(' ')' ni
  20            | PROC '(' dlistaparametros ')' ni '{' body '}'
  21            | PROC ID '(' dlistaparametros ')' '{' body '}'
  22            | PROC ID '(' ')' '{' body '}'

  23  ni : NI '=' CONST_INT
  24     | NI CONST_INT
  25     | '=' CONST_INT
  26     | NI '='

  27  dlistaparametros : dparametro
  28                   | dparametro ',' dparametro
  29                   | dparametro ',' dparametro ',' dparametro
  30                   | dparametro ',' dparametro ',' dparametro ',' dlistaparametros

  31  dparametro : tipo ID
  32             | VAR tipo ID
  33             | tipo
  34             | ID
  35             | VAR ID
  36             | VAR tipo

  37  listavariables : ID
  38                 | listavariables ',' ID
  39                 | listavariables ID

  40  asignacion : ID '=' expresion
  41             | ID '='
  42             | '=' expresion

  43  salida : OUT '(' CADENA ')'

  44  control : WHILE '(' condicion ')' LOOP bodycontrol
  45          | WHILE '(' condicion LOOP bodycontrol
  46          | WHILE condicion LOOP bodycontrol

  47  seleccion : IF '(' condicion ')' bodycontrol ELSE bodycontrol END_IF
  48            | IF '(' condicion ')' bodycontrol END_IF
  49            | IF '(' ')' bodycontrol ELSE bodycontrol END_IF
  50            | IF '(' condicion ')' bodycontrol ELSE bodycontrol
  51            | IF '(' condicion ')' ELSE bodycontrol END_IF
  52            | IF '(' condicion ')' bodycontrol ELSE END_IF
  53            | IF condicion bodycontrol ELSE bodycontrol END_IF
  54            | IF '(' ')' bodycontrol END_IF
  55            | IF '(' condicion ')' bodycontrol
  56            | IF '(' condicion ')' END_IF
  57            | IF condicion bodycontrol END_IF

  58  invocacion : ID '(' listavariables ')'
  59             | ID '(' ')'

  60  bodycontrol : sentenciacontrol ';'
  61              | '{' listasentenciacontrol '}'

  62  sentenciacontrol : ejecutable

  63  listasentenciacontrol : listasentenciacontrol sentenciacontrol ';'
  64                        | sentenciacontrol ';'

  65  condicion : expresion comparador expresion
  66            | expresion '=' expresion

  67  comparador : IGUALIGUAL
  68             | MENORIGUAL
  69             | MAYORIGUAL
  70             | DISTINTO
  71             | '<'
  72             | '>'

  73  tipo : INTEGER
  74       | FLOAT

  75  expresion : expresion '+' termino
  76            | expresion '-' termino
  77            | termino
  78            | '(' expresion ')'

  79  termino : termino '*' factor
  80          | termino '/' factor
  81          | factor

  82  factor : ID
  83         | CONST_INT
  84         | '-' CONST_INT
  85         | CONST_FLOAT
  86         | '-' CONST_FLOAT

state 0
	$accept : . programa $end  (0)

	error  shift 1
	PROC  shift 2
	IF  shift 3
	OUT  shift 4
	INTEGER  shift 5
	FLOAT  shift 6
	WHILE  shift 7
	ID  shift 8
	'='  shift 9
	.  error

	programa  goto 10
	body  goto 11
	sentencia  goto 12
	ejecutable  goto 13
	declarativa  goto 14
	asignacion  goto 15
	salida  goto 16
	control  goto 17
	seleccion  goto 18
	invocacion  goto 19
	tipo  goto 20
	listavariables  goto 21
	procedure  goto 22


state 1
	body : error . ';'  (4)

	';'  shift 23
	.  error


state 2
	procedure : PROC . ID '(' dlistaparametros ')' ni '{' body '}'  (16)
	procedure : PROC . ID '(' ')' ni '{' body '}'  (17)
	procedure : PROC . ID '(' dlistaparametros ')' ni  (18)
	procedure : PROC . ID '(' ')' ni  (19)
	procedure : PROC . '(' dlistaparametros ')' ni '{' body '}'  (20)
	procedure : PROC . ID '(' dlistaparametros ')' '{' body '}'  (21)
	procedure : PROC . ID '(' ')' '{' body '}'  (22)

	ID  shift 24
	'('  shift 25
	.  error


state 3
	seleccion : IF . '(' condicion ')' bodycontrol ELSE bodycontrol END_IF  (47)
	seleccion : IF . '(' condicion ')' bodycontrol END_IF  (48)
	seleccion : IF . '(' ')' bodycontrol ELSE bodycontrol END_IF  (49)
	seleccion : IF . '(' condicion ')' bodycontrol ELSE bodycontrol  (50)
	seleccion : IF . '(' condicion ')' ELSE bodycontrol END_IF  (51)
	seleccion : IF . '(' condicion ')' bodycontrol ELSE END_IF  (52)
	seleccion : IF . condicion bodycontrol ELSE bodycontrol END_IF  (53)
	seleccion : IF . '(' ')' bodycontrol END_IF  (54)
	seleccion : IF . '(' condicion ')' bodycontrol  (55)
	seleccion : IF . '(' condicion ')' END_IF  (56)
	seleccion : IF . condicion bodycontrol END_IF  (57)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 29
	'-'  shift 30
	.  error

	expresion  goto 31
	condicion  goto 32
	termino  goto 33
	factor  goto 34


state 4
	salida : OUT . '(' CADENA ')'  (43)

	'('  shift 35
	.  error


state 5
	tipo : INTEGER .  (73)

	.  reduce 73


state 6
	tipo : FLOAT .  (74)

	.  reduce 74


state 7
	control : WHILE . '(' condicion ')' LOOP bodycontrol  (44)
	control : WHILE . '(' condicion LOOP bodycontrol  (45)
	control : WHILE . condicion LOOP bodycontrol  (46)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 36
	'-'  shift 30
	.  error

	expresion  goto 31
	condicion  goto 37
	termino  goto 33
	factor  goto 34


state 8
	listavariables : ID .  (37)
	asignacion : ID . '=' expresion  (40)
	asignacion : ID . '='  (41)
	invocacion : ID . '(' listavariables ')'  (58)
	invocacion : ID . '(' ')'  (59)

	'('  shift 38
	'='  shift 39
	ID  reduce 37
	';'  reduce 37
	','  reduce 37


state 9
	asignacion : '=' . expresion  (42)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 40
	'-'  shift 30
	.  error

	expresion  goto 41
	termino  goto 33
	factor  goto 34


state 10
	$accept : programa . $end  (0)

	$end  accept


state 11
	programa : body .  (1)
	body : body . sentencia ';'  (2)

	PROC  shift 2
	IF  shift 3
	OUT  shift 4
	INTEGER  shift 5
	FLOAT  shift 6
	WHILE  shift 7
	ID  shift 8
	'='  shift 9
	$end  reduce 1

	sentencia  goto 42
	ejecutable  goto 13
	declarativa  goto 14
	asignacion  goto 15
	salida  goto 16
	control  goto 17
	seleccion  goto 18
	invocacion  goto 19
	tipo  goto 20
	listavariables  goto 21
	procedure  goto 22


state 12
	body : sentencia . ';'  (3)

	';'  shift 43
	.  error


state 13
	sentencia : ejecutable .  (5)

	.  reduce 5


state 14
	sentencia : declarativa .  (6)

	.  reduce 6


state 15
	ejecutable : asignacion .  (7)

	.  reduce 7


state 16
	ejecutable : salida .  (8)

	.  reduce 8


state 17
	ejecutable : control .  (9)

	.  reduce 9


state 18
	ejecutable : seleccion .  (10)

	.  reduce 10


state 19
	ejecutable : invocacion .  (11)

	.  reduce 11


state 20
	declarativa : tipo . listavariables  (12)
	declarativa : tipo .  (15)

	ID  shift 44
	';'  reduce 15

	listavariables  goto 45


state 21
	declarativa : listavariables .  (14)
	listavariables : listavariables . ',' ID  (38)
	listavariables : listavariables . ID  (39)

	ID  shift 46
	','  shift 47
	';'  reduce 14


state 22
	declarativa : procedure .  (13)

	.  reduce 13


state 23
	body : error ';' .  (4)

	.  reduce 4


state 24
	procedure : PROC ID . '(' dlistaparametros ')' ni '{' body '}'  (16)
	procedure : PROC ID . '(' ')' ni '{' body '}'  (17)
	procedure : PROC ID . '(' dlistaparametros ')' ni  (18)
	procedure : PROC ID . '(' ')' ni  (19)
	procedure : PROC ID . '(' dlistaparametros ')' '{' body '}'  (21)
	procedure : PROC ID . '(' ')' '{' body '}'  (22)

	'('  shift 48
	.  error


state 25
	procedure : PROC '(' . dlistaparametros ')' ni '{' body '}'  (20)

	VAR  shift 49
	INTEGER  shift 5
	FLOAT  shift 6
	ID  shift 50
	.  error

	tipo  goto 51
	dlistaparametros  goto 52
	dparametro  goto 53


state 26
	factor : CONST_INT .  (83)

	.  reduce 83


state 27
	factor : CONST_FLOAT .  (85)

	.  reduce 85


state 28
	factor : ID .  (82)

	.  reduce 82


state 29
	seleccion : IF '(' . condicion ')' bodycontrol ELSE bodycontrol END_IF  (47)
	seleccion : IF '(' . condicion ')' bodycontrol END_IF  (48)
	seleccion : IF '(' . ')' bodycontrol ELSE bodycontrol END_IF  (49)
	seleccion : IF '(' . condicion ')' bodycontrol ELSE bodycontrol  (50)
	seleccion : IF '(' . condicion ')' ELSE bodycontrol END_IF  (51)
	seleccion : IF '(' . condicion ')' bodycontrol ELSE END_IF  (52)
	seleccion : IF '(' . ')' bodycontrol END_IF  (54)
	seleccion : IF '(' . condicion ')' bodycontrol  (55)
	seleccion : IF '(' . condicion ')' END_IF  (56)
	expresion : '(' . expresion ')'  (78)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 40
	')'  shift 54
	'-'  shift 30
	.  error

	expresion  goto 55
	condicion  goto 56
	termino  goto 33
	factor  goto 34


state 30
	factor : '-' . CONST_INT  (84)
	factor : '-' . CONST_FLOAT  (86)

	CONST_INT  shift 57
	CONST_FLOAT  shift 58
	.  error


state 31
	condicion : expresion . comparador expresion  (65)
	condicion : expresion . '=' expresion  (66)
	expresion : expresion . '+' termino  (75)
	expresion : expresion . '-' termino  (76)

	MENORIGUAL  shift 59
	MAYORIGUAL  shift 60
	IGUALIGUAL  shift 61
	DISTINTO  shift 62
	'='  shift 63
	'<'  shift 64
	'>'  shift 65
	'+'  shift 66
	'-'  shift 67
	.  error

	comparador  goto 68


state 32
	seleccion : IF condicion . bodycontrol ELSE bodycontrol END_IF  (53)
	seleccion : IF condicion . bodycontrol END_IF  (57)

	IF  shift 3
	OUT  shift 4
	WHILE  shift 7
	ID  shift 69
	'{'  shift 70
	'='  shift 9
	.  error

	ejecutable  goto 71
	asignacion  goto 15
	salida  goto 16
	control  goto 17
	seleccion  goto 18
	invocacion  goto 19
	bodycontrol  goto 72
	sentenciacontrol  goto 73


state 33
	expresion : termino .  (77)
	termino : termino . '*' factor  (79)
	termino : termino . '/' factor  (80)

	'*'  shift 74
	'/'  shift 75
	MENORIGUAL  reduce 77
	MAYORIGUAL  reduce 77
	IGUALIGUAL  reduce 77
	DISTINTO  reduce 77
	IF  reduce 77
	OUT  reduce 77
	WHILE  reduce 77
	LOOP  reduce 77
	ID  reduce 77
	';'  reduce 77
	')'  reduce 77
	'{'  reduce 77
	'='  reduce 77
	'<'  reduce 77
	'>'  reduce 77
	'+'  reduce 77
	'-'  reduce 77


state 34
	termino : factor .  (81)

	.  reduce 81


state 35
	salida : OUT '(' . CADENA ')'  (43)

	CADENA  shift 76
	.  error


state 36
	control : WHILE '(' . condicion ')' LOOP bodycontrol  (44)
	control : WHILE '(' . condicion LOOP bodycontrol  (45)
	expresion : '(' . expresion ')'  (78)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 40
	'-'  shift 30
	.  error

	expresion  goto 55
	condicion  goto 77
	termino  goto 33
	factor  goto 34


state 37
	control : WHILE condicion . LOOP bodycontrol  (46)

	LOOP  shift 78
	.  error


state 38
	invocacion : ID '(' . listavariables ')'  (58)
	invocacion : ID '(' . ')'  (59)

	ID  shift 44
	')'  shift 79
	.  error

	listavariables  goto 80


state 39
	asignacion : ID '=' . expresion  (40)
	asignacion : ID '=' .  (41)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 40
	'-'  shift 30
	';'  reduce 41

	expresion  goto 81
	termino  goto 33
	factor  goto 34


state 40
	expresion : '(' . expresion ')'  (78)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 40
	'-'  shift 30
	.  error

	expresion  goto 82
	termino  goto 33
	factor  goto 34


state 41
	asignacion : '=' expresion .  (42)
	expresion : expresion . '+' termino  (75)
	expresion : expresion . '-' termino  (76)

	'+'  shift 66
	'-'  shift 67
	';'  reduce 42


state 42
	body : body sentencia . ';'  (2)

	';'  shift 83
	.  error


state 43
	body : sentencia ';' .  (3)

	.  reduce 3


state 44
	listavariables : ID .  (37)

	.  reduce 37


state 45
	declarativa : tipo listavariables .  (12)
	listavariables : listavariables . ',' ID  (38)
	listavariables : listavariables . ID  (39)

	ID  shift 46
	','  shift 47
	';'  reduce 12


state 46
	listavariables : listavariables ID .  (39)

	.  reduce 39


state 47
	listavariables : listavariables ',' . ID  (38)

	ID  shift 84
	.  error


state 48
	procedure : PROC ID '(' . dlistaparametros ')' ni '{' body '}'  (16)
	procedure : PROC ID '(' . ')' ni '{' body '}'  (17)
	procedure : PROC ID '(' . dlistaparametros ')' ni  (18)
	procedure : PROC ID '(' . ')' ni  (19)
	procedure : PROC ID '(' . dlistaparametros ')' '{' body '}'  (21)
	procedure : PROC ID '(' . ')' '{' body '}'  (22)

	VAR  shift 49
	INTEGER  shift 5
	FLOAT  shift 6
	ID  shift 50
	')'  shift 85
	.  error

	tipo  goto 51
	dlistaparametros  goto 86
	dparametro  goto 53


state 49
	dparametro : VAR . tipo ID  (32)
	dparametro : VAR . ID  (35)
	dparametro : VAR . tipo  (36)

	INTEGER  shift 5
	FLOAT  shift 6
	ID  shift 87
	.  error

	tipo  goto 88


state 50
	dparametro : ID .  (34)

	.  reduce 34


state 51
	dparametro : tipo . ID  (31)
	dparametro : tipo .  (33)

	ID  shift 89
	')'  reduce 33
	','  reduce 33


state 52
	procedure : PROC '(' dlistaparametros . ')' ni '{' body '}'  (20)

	')'  shift 90
	.  error


state 53
	dlistaparametros : dparametro .  (27)
	dlistaparametros : dparametro . ',' dparametro  (28)
	dlistaparametros : dparametro . ',' dparametro ',' dparametro  (29)
	dlistaparametros : dparametro . ',' dparametro ',' dparametro ',' dlistaparametros  (30)

	','  shift 91
	')'  reduce 27


state 54
	seleccion : IF '(' ')' . bodycontrol ELSE bodycontrol END_IF  (49)
	seleccion : IF '(' ')' . bodycontrol END_IF  (54)

	IF  shift 3
	OUT  shift 4
	WHILE  shift 7
	ID  shift 69
	'{'  shift 70
	'='  shift 9
	.  error

	ejecutable  goto 71
	asignacion  goto 15
	salida  goto 16
	control  goto 17
	seleccion  goto 18
	invocacion  goto 19
	bodycontrol  goto 92
	sentenciacontrol  goto 73


state 55
	condicion : expresion . comparador expresion  (65)
	condicion : expresion . '=' expresion  (66)
	expresion : expresion . '+' termino  (75)
	expresion : expresion . '-' termino  (76)
	expresion : '(' expresion . ')'  (78)

	MENORIGUAL  shift 59
	MAYORIGUAL  shift 60
	IGUALIGUAL  shift 61
	DISTINTO  shift 62
	')'  shift 93
	'='  shift 63
	'<'  shift 64
	'>'  shift 65
	'+'  shift 66
	'-'  shift 67
	.  error

	comparador  goto 68


state 56
	seleccion : IF '(' condicion . ')' bodycontrol ELSE bodycontrol END_IF  (47)
	seleccion : IF '(' condicion . ')' bodycontrol END_IF  (48)
	seleccion : IF '(' condicion . ')' bodycontrol ELSE bodycontrol  (50)
	seleccion : IF '(' condicion . ')' ELSE bodycontrol END_IF  (51)
	seleccion : IF '(' condicion . ')' bodycontrol ELSE END_IF  (52)
	seleccion : IF '(' condicion . ')' bodycontrol  (55)
	seleccion : IF '(' condicion . ')' END_IF  (56)

	')'  shift 94
	.  error


state 57
	factor : '-' CONST_INT .  (84)

	.  reduce 84


state 58
	factor : '-' CONST_FLOAT .  (86)

	.  reduce 86


state 59
	comparador : MENORIGUAL .  (68)

	.  reduce 68


state 60
	comparador : MAYORIGUAL .  (69)

	.  reduce 69


state 61
	comparador : IGUALIGUAL .  (67)

	.  reduce 67


state 62
	comparador : DISTINTO .  (70)

	.  reduce 70


state 63
	condicion : expresion '=' . expresion  (66)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 40
	'-'  shift 30
	.  error

	expresion  goto 95
	termino  goto 33
	factor  goto 34


state 64
	comparador : '<' .  (71)

	.  reduce 71


state 65
	comparador : '>' .  (72)

	.  reduce 72


state 66
	expresion : expresion '+' . termino  (75)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'-'  shift 30
	.  error

	termino  goto 96
	factor  goto 34


state 67
	expresion : expresion '-' . termino  (76)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'-'  shift 30
	.  error

	termino  goto 97
	factor  goto 34


state 68
	condicion : expresion comparador . expresion  (65)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'('  shift 40
	'-'  shift 30
	.  error

	expresion  goto 98
	termino  goto 33
	factor  goto 34


state 69
	asignacion : ID . '=' expresion  (40)
	asignacion : ID . '='  (41)
	invocacion : ID . '(' listavariables ')'  (58)
	invocacion : ID . '(' ')'  (59)

	'('  shift 38
	'='  shift 39
	.  error


state 70
	bodycontrol : '{' . listasentenciacontrol '}'  (61)

	IF  shift 3
	OUT  shift 4
	WHILE  shift 7
	ID  shift 69
	'='  shift 9
	.  error

	ejecutable  goto 71
	asignacion  goto 15
	salida  goto 16
	control  goto 17
	seleccion  goto 18
	invocacion  goto 19
	sentenciacontrol  goto 99
	listasentenciacontrol  goto 100


state 71
	sentenciacontrol : ejecutable .  (62)

	.  reduce 62


state 72
	seleccion : IF condicion bodycontrol . ELSE bodycontrol END_IF  (53)
	seleccion : IF condicion bodycontrol . END_IF  (57)

	ELSE  shift 101
	END_IF  shift 102
	.  error


state 73
	bodycontrol : sentenciacontrol . ';'  (60)

	';'  shift 103
	.  error


state 74
	termino : termino '*' . factor  (79)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'-'  shift 30
	.  error

	factor  goto 104


state 75
	termino : termino '/' . factor  (80)

	CONST_INT  shift 26
	CONST_FLOAT  shift 27
	ID  shift 28
	'-'  shift 30
	.  error

	factor  goto 105


state 76
	salida : OUT '(' CADENA . ')'  (43)

	')'  shift 106
	.  error


state 77
	control : WHILE '(' condicion . ')' LOOP bodycontrol  (44)
	control : WHILE '(' condicion . LOOP bodycontrol  (45)

	LOOP  shift 107
	')'  shift 108
	.  error


state 78
	control : WHILE condicion LOOP . bodycontrol  (46)

	IF  shift 3
	OUT  shift 4
	WHILE  shift 7
	ID  shift 69
	'{'  shift 70
	'='  shift 9
	.  error

	ejecutable  goto 71
	asignacion  goto 15
	salida  goto 16
	control  goto 17
	seleccion  goto 18
	invocacion  goto 19
	bodycontrol  goto 109
	sentenciacontrol  goto 73


state 79
	invocacion : ID '(' ')' .  (59)

	.  reduce 59


state 80
	listavariables : listavariables . ',' ID  (38)
	listavariables : listavariables . ID  (39)
	invocacion : ID '(' listavariables . ')'  (58)

	ID  shift 46
	')'  shift 110
	','  shift 47
	.  error


state 81
	asignacion : ID '=' expresion .  (40)
	expresion : expresion . '+' termino  (75)
	expresion : expresion . '-' termino  (76)

	'+'  shift 66
	'-'  shift 67
	';'  reduce 40


state 82
	expresion : expresion . '+' termino  (75)
	expresion : expresion . '-' termino  (76)
	expresion : '(' expresion . ')'  (78)

	')'  shift 93
	'+'  shift 66
	'-'  shift 67
	.  error


state 83
	body : body sentencia ';' .  (2)

	.  reduce 2


state 84
	listavariables : listavariables ',' ID .  (38)

	.  reduce 38


state 85
	procedure : PROC ID '(' ')' . ni '{' body '}'  (17)
	procedure : PROC ID '(' ')' . ni  (19)
	procedure : PROC ID '(' ')' . '{' body '}'  (22)

	NI  shift 111
	'{'  shift 112
	'='  shift 113
	.  error

	ni  goto 114


state 86
	procedure : PROC ID '(' dlistaparametros . ')' ni '{' body '}'  (16)
	procedure : PROC ID '(' dlistaparametros . ')' ni  (18)
	procedure : PROC ID '(' dlistaparametros . ')' '{' body '}'  (21)

	')'  shift 115
	.  error


state 87
	dparametro : VAR ID .  (35)

	.  reduce 35


state 88
	dparametro : VAR tipo . ID  (32)
	dparametro : VAR tipo .  (36)

	ID  shift 116
	')'  reduce 36
	','  reduce 36


state 89
	dparametro : tipo ID .  (31)

	.  reduce 31


state 90
	procedure : PROC '(' dlistaparametros ')' . ni '{' body '}'  (20)

	NI  shift 111
	'='  shift 113
	.  error

	ni  goto 117

